// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyGraph delete should correctly delete a connection 1`] = `
Array [
  Object {
    "EphemeraId": "VARIABLE#testOne",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
      },
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`DependencyGraph delete should decrement connection assets when redundancies exist 1`] = `
Array [
  Object {
    "EphemeraId": "VARIABLE#testOne",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
          "layer",
        ],
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`DependencyGraph get should correctly fetch a tree 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
    "tag": "Computed",
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "connections": Array [],
    "tag": "Computed",
  },
]
`;

exports[`DependencyGraph getPartial should correctly decipher a partial tree 1`] = `
Array [
  Object {
    "EphemeraId": "VARIABLE#testOne",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
      },
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`DependencyGraph put should backpopulate antidependency links 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "assets": Array [],
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testFour",
        "assets": Array [
          "base",
        ],
        "key": "testFour",
      },
    ],
    "tag": "Computed",
  },
  Object {
    "EphemeraId": "COMPUTED#testFour",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`DependencyGraph put should correctly add a complete tree 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testFour",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
        "key": "testFour",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Complete",
    "connections": Array [],
  },
]
`;

exports[`DependencyGraph put should correctly add a single graph item 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testFour",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
        "key": "testFour",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;
